--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@ font-family: 'Roboto', sans-serif}
               </div>
               <p>English</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-blue w3-center" style="height:24px;width:48%">65%</div>
+                <div class="w3-round-xlarge w3-blue w3-center" style="height:24px;width:65%">65%</div>
               </div>
               <p>Spanish</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-blue w3-center" style="height:24px;width:55%">60%</div>
+                <div class="w3-round-xlarge w3-blue w3-center" style="height:24px;width:60%">60%</div>
               </div>
               <br>
             </div>
@@ -150,7 +150,7 @@ font-family: 'Roboto', sans-serif}
     <footer class="w3-container w3-blue-gray w3-center w3-margin-top">
       <p>Find me on social media.</p>
       <a href="https://github.com/Jonny23Parker" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-      <a href="https://www.linkedin.com/in/jonatascri8/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+      <a href="hhttps://www.linkedin.com/in/jonnyparker/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
